--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.0",
     "express": "^4.18.2",
-    "socket.io": "^4.5.4",
+    "socket.io": "^4.7.2",
     "pg": "^8.11.3",
     "cors": "^2.8.5"
   },
@@ -20,6 +21,6 @@
     "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   }
 }
