--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,17 @@
 {
   "name": "customer-support-backend",
   "version": "1.0.0",
-  "description": "Real-time customer support chat backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["chat", "support", "websocket", "socket.io"],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "socket.io": "^4.7.2"
   }
 }
